# dbms-final-project-python

./: .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt
app/api/v1/: images.py  orders.py  products.py  users.py
app/database/: __init__.py  base.py  models.py  session.py
app/schemas/: general.py  order.py  product.py  user.py
app/services/: auth.py  order.py  product.py  user.py
app/utils/: auth.py  config.py  crypto.py  enum.py
docs/: behavior.md
